# stream-discord-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
src/: dave.rs  lib.rs  utils.rs
src/gateway/: events.rs  mod.rs  opcodes.rs  streamer.rs
src/media/: audio_stream.rs  base_stream.rs  codec_id.rs  decoder.rs  demuxer.rs  mod.rs  video_stream.rs
src/media/encoders/: mod.rs  nvenc.rs  software.rs  vaapi.rs
src/processing/: annexb.rs  annexb_rw.rs  mod.rs  sps_vui.rs
src/voice/: codec_payload.rs  connection.rs  mod.rs  opcodes.rs  stream_connection.rs  types.rs  webrtc.rs
