[package]
name = "discord-stream-rs"
version = "0.1.3"
edition = "2024"
authors = ["Tky567"]
description = "Discord voice/video streaming library for selfbots, ported from @dank074/discord-video-stream"
license = "MIT"
repository = "https://github.com/Tky567/stream-discord-rs"
documentation = "https://docs.rs/discord-stream-rs"
homepage = "https://github.com/Tky567/stream-discord-rs"
exclude = [
    "target/",
    ".git/",
    ".gitignore",
    ".vscode/",
    "Cargo.lock",
]

[features]
default = ["media"]
media = ["dep:ffmpeg-next"]

[dependencies]
# DAVE / E2EE
davey = "0.1.3"

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"

# WebRTC (ICE + DTLS-SRTP + RTP)
webrtc = "0.14"
bytes = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"

# Errors
thiserror = "2"

# FFmpeg bindings (media demux/decode/encode pipeline)
ffmpeg-next = { version = "7", features = ["codec", "format", "filter", "software-resampling", "software-scaling"], optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tracing-subscriber = "0.3"
